...
    "refresh": "ينعش",
    "remove": "يزيل",
    "mark_read": "علامة القراءة",
  };

  Map<String, dynamic> enLangs = {
    'sitename': 'ETA',
    'trips_history': 'Trips log history',
    'real_route': 'Real route',
    'planned_route': 'Planned route',
    'show_real_route': 'Show real route',
    'show_planned_route': 'Show planned route',
    'show_map': 'Show map route',
...
    "attention": "Attention",
    "please_enter_your_email_address": "Please enter your email address",
    "invalid_email": "Invalid Email",
    "please_enter_a_valid_email_address": "Please enter a valid email address",
    "success": "Success",
    "your_help_messages": "Your help messages",
    "error": "Error",
    "close": "Close",
    "recovery_password_mail_sended": "Password recovery email sent successfully!",
    "pending": "Pending",
    "in_review": "In review",
    "resolved": "Resolved",
    "logout": "Logout",
...
    'start_now': 'Comenzar',
    'start_with_your_account': 'Comience con su cuenta',
    'dark_mode': 'Modo oscuro',
    'show_template_in_darkmode': 'Usar el modo oscuro',
    'next': 'Continuar',
    'sign_in': 'Ingresar',
    'welcome_back': 'Bienvenido',
    'email': 'Correo electrónico',
    'password': 'Contraseña',
    'confirm': 'Confirmar',
    'recovery_password_mail_sended':
        '¡Correo de recuperación de contraseña enviado!',
    'we_can_help': 'Necesitas ayuda?',
...
    "error_loading_absences": "Error al cargar las inasistencias",
    "absence_cancel_successfully": "Inasistencia cancelada exitosamente",
    "error_deleting_absence": "Error al eliminar la inasistencia",
    "cancel_absence": "Cancelar",
    "accept": "Aceptar",
    "register_absences_on_all": "Registrar inasistencia en todos los viajes de la fecha seleccionada",
    "please_wait_for_a_trip": "Por favor, espere a que se inicie un viaje o revise su conexión.",
    "refresh": "Refrescar",
    "remove": "Eliminar",
    "mark_read": "Marcar como leído",
    "please_check_your_email_inbox_and_follow_the_instructions_to_reset_your_password.": "Por favor revise su bandeja de entrada y siga las instrucciones para restablecer su contraseña.",
    "email_not_found._please_check_and_try_again.": "Correo electrónico no encontrado. Por favor verifique e intente nuevamente.",
    "invalid_email_format._please_check_and_try_again.": "Formato de correo electrónico inválido. Por favor verifique e intente nuevamente.",
...
